# vidchat

./: .gitignore  .mise.toml  .tool-versions  CONTRIBUTING.md  README.md  config.example.yaml  example.py  main.py  pyproject.toml  test_headless.py
docs/: ARCHITECTURE.md  AVATAR_GUIDE.md  CLI_COMMANDS.md  CLI_GUIDE.md  MLFLOW_TRACKING.md  PROJECT.md  REFACTORING_SUMMARY.md  RTX_5090_GPU_SETUP.md  RVC_QUICK_START.md  RVC_TRAINING.md  SADTALKER_INTEGRATION.md  VOICE_CLONING_SOLUTIONS.md  VOICE_DATA_PREP_GUIDE.md  WEB_INTERFACE_GUIDE.md  WEB_INTERFACE_README.md  XTTS_VOICE_CLONING.md
plans/: CLEANUP.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_PLAN.md  TEST_RESULTS.md  TRAINING_VERIFICATION.md
scripts/: setup.sh
src/vidchat/: __init__.py  cli.py
src/vidchat/audio/: __init__.py  analyzer.py
src/vidchat/avatar/: __init__.py  sadtalker_renderer.py
src/vidchat/config/: __init__.py  settings.py
src/vidchat/core/: __init__.py  agent.py
src/vidchat/data/: __init__.py  config.py  downloader.py  pipeline.py  preprocessor.py  transcriber.py
src/vidchat/training/: extract_features_patched.py  mlflow_tracker.py  rvc_train_with_tracking.py  rvc_trainer.py
src/vidchat/tts/: __init__.py  base.py  piper.py  rvc.py  xtts.py
src/vidchat/utils/: __init__.py  config_loader.py  logger.py
src/vidchat/voice_prep/: __init__.py  prepare_voice_data.py
src/vidchat/web/: __init__.py  server.py
src/vidchat/web/frontend/: package-lock.json  package.json
src/vidchat/web/frontend/src/: App.tsx
src/vidchat/web/frontend/src/components/: Avatar.tsx  Chat.tsx
src/vidchat/web/frontend/src/hooks/: useWebSocket.ts
