[project]
name = "vidchat"
version = "0.1.0"
description = "AI chat agent with avatar video and audio responses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.0.0",
    "ollama>=0.3.0",
    "pyttsx3>=2.90",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
]

[project.scripts]
vidchat = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]
